--- a/style.css
+++ b/style.css
@@ -69,11 +69,14 @@ h2 {
     background-color: rgba(255, 255, 255, 0.1);
 }
 
+a {
+    text-decoration: none;
+}
+
 p {
     margin: 4px;
     font-family: 'Montserrat', sans-serif;
     color: white;
-    text-decoration: none;
 }
 
 .iconify {
