--- a/style.css
+++ b/style.css
@@ -3,7 +3,14 @@
 body {
     padding: 0;
     margin: 0;
-    background-color: darkslategray;
+    background: linear-gradient(0deg, rgba(0,26,89,1) 0%, rgba(19,26,67,1) 100%);
+}
+
+#bg {
+    opacity: 0.33;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
 }
 
 #container {
@@ -15,10 +22,12 @@ body {
 }
 
 #content {
+    z-index: 99 !important;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 5vh;
 }
 
 img {
@@ -26,7 +35,6 @@ img {
     height: 150px;
     border-radius: 50%;
     border: 7px solid white;
-    filter: grayscale(100%);
 }
 
 h1 {
@@ -39,6 +47,7 @@ h1 {
 h2 {
     margin: 0px;
     margin-bottom: 20px;
+    margin-top: 5px;
     font-size: large;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
